# CoconutCNC

./: .gitignore  AppState.cpp  AppState.h  CMakeLists.txt  GLHeader.h  Main.cpp  Window.cpp  Window.h  readme.md
Client/: AppState.cpp  AppState.h  CMakeLists.txt  GLHeader.h  Main.cpp  Window.cpp  Window.h
Client/Common/: Directory.cpp  Directory.h  File.h
Client/Model/Grbl/: GCodeCommand.cpp  GCodeCommandNotFoundException.cpp  GCodeFileModel.cpp  GCodeFileModel.h  GCodeParser.cpp  GcodeMarkerList.cpp  GcodeMarkerList.h  GcodeTable.cpp  GrblMachine.cpp  GrblMachine.h  GrblResponse.cpp  Interpolation.h  PointSegment.cpp
Client/Model/Settings/: ConnectionSettings.cpp  Cylinder.cpp  Cylinder.h  InterfaceSettings.cpp  InterfaceSettings.h  JsonSerialization.cpp  JsonSerialization.h  MachineSettings.cpp  SettingsModel.cpp  ToolHolderSettings.cpp  ToolHolderSettings.h  ToolSettings.cpp  ToolSettings.h
Client/Widgets/: Widget.cpp  Widget.h
Client/Widgets/GL/: GLWidget.cpp  GLWidget.h  GridDrawer.cpp  GridDrawer.h  ToolDrawer.cpp
Client/Widgets/ImGui/: ConsoleWindow.cpp  ConsoleWindow.h  ControlWindow.cpp  ControlWindow.h  GCodeTableWindow.cpp  ImGuiWidget.cpp  ImGuiWidget.h  JogWindow.cpp  JogWindow.h  MenuBar.cpp  MenuBar.h  OverridesWindow.cpp  SettingsWindow.cpp  StateWindow.cpp  StateWindow.h
Common/: File.cpp  Logger.h  TIme.h
Model/: SerialPortModel.cpp  SerialPortModel.h
Model/Grbl/: GCodeCommand.cpp  GCodeCommand.h  GCodeFileModel.cpp  GCodeFileModel.h  GCodeParser.cpp  GCodeParser.h  GCodeViewParser.cpp  GCodeViewParser.h  GrblConfiguration.h  GrblConfigurationModel.cpp  GrblMachine.cpp  GrblMachine.h  GrblMachineModel.cpp  GrblMachineModel.h  GrblMachineState.h  GrblResponse.cpp  PointSegment.cpp  PointSegment.h
Model/Settings/: ConnectionSettings.cpp  ConnectionSettings.h  Cylinder.cpp  Cylinder.h  InterfaceSettings.cpp  JsonSerialization.h  MachineSettings.cpp  MachineSettings.h  SettingsModel.cpp  SettingsModel.h  ToolHolderSettings.cpp  ToolHolderSettings.h  ToolSettings.cpp  ToolSettings.h
Resources/: coconut_settings.json
Widgets/GL/: GCodeDrawer.cpp  GCodeDrawer.h  GLWidget.cpp  GLWidget.h  GridDrawer.cpp  GridDrawer.h  OriginDrawer.cpp  OriginDrawer.h  SafePositionDrawer.cpp  SafePositionDrawer.h  SelectionDrawer.cpp  ToolDrawer.cpp  ToolDrawer.h
Widgets/ImGui/: ConsoleWindow.cpp  ControlWindow.cpp  GCodeTableWindow.cpp  GCodeTableWindow.h  JogWindow.cpp  JogWindow.h  MenuBar.cpp  MenuBar.h  OverridesWindow.cpp  PreviewWindow.cpp  PreviewWindow.h  SettingsWindow.cpp  SettingsWindow.h  StateWindow.cpp  StateWindow.h  WorkAreaWindow.cpp  WorkAreaWindow.h
libGrbl/: ArcProperties.cpp  ArcProperties.h  CMakeLists.txt  GCodeCommand.cpp  GCodeCommand.h  GCodeCommandNotFoundException.h  GcodeFile.cpp  GcodeFile.h  GcodeParser.cpp  GcodeParser.h  GcodeTable.h  GcodeViewParser.cpp  GcodeViewParser.h  GrblConfiguration.cpp  GrblMachine.cpp  GrblMachine.h  GrblMachineState.h  GrblResponse.h  LineSegment.cpp  PointSegment.cpp  PointSegment.h  Util.h
src/: AppState.cpp  AppState.h  GLHeader.h  Main.cpp  Window.cpp  Window.h
src/Common/: Directory.cpp  File.cpp  File.h  Time.h  Util.h
src/Model/: SerialPortModel.cpp  SerialPortModel.h
src/Model/Grbl/: GCodeCommand.cpp  GCodeCommand.h  GCodeFileModel.h  GCodeParser.cpp  GCodeParser.h  GCodeViewParser.cpp  GrblConfigurationModel.h  GrblMachineModel.cpp  GrblMachineModel.h  GrblResponse.h  Interpolation.h  LineSegment.h  PointSegment.cpp  PointSegment.h
src/Model/Settings/: ConnectionSettings.cpp  InterfaceSettings.cpp  InterfaceSettings.h  JsonSerialization.cpp  MachineSettings.cpp  MachineSettings.h  SettingsModel.cpp  SettingsModel.h  ToolHolderSettings.cpp
src/Widgets/GL/: GCodeDrawer.h  GridDrawer.cpp  GridDrawer.h  SelectionDrawer.h  ToolDrawer.cpp  ToolDrawer.h
src/Widgets/ImGui/: ConsoleWindow.cpp  ConsoleWindow.h  ControlWindow.cpp  GCodeTableWindow.cpp  GCodeTableWindow.h  JogWindow.cpp  MenuBar.cpp  OverridesWindow.cpp  OverridesWindow.h  SettingsWindow.cpp  StateWindow.h  WorkAreaWindow.cpp  WorkAreaWindow.h
tmp/: GCodeDrawer.cpp  GCodeDrawer.h  OriginDrawer.cpp  OriginDrawer.h  SafePositionDrawer.cpp  SafePositionDrawer.h  SelectionDrawer.cpp  SelectionDrawer.h  ShaderDrawable.cpp  ShaderDrawable.h  ToolDrawer.cpp  ToolDrawer.h
